# OpenAgentHub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  out.txt  pyproject.toml  registry.json  roadmap.md  test_output.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: database.py  server.py
app/api/: endpoints.py  server.py
app/core/: config.py  database.py
app/models/: domain.py
app/services/: healthcheck_service.py  registry_service.py  validation_service.py
app/templates/: index.html
cli/: main.py
scripts/: seed.py
tests/: conftest.py  test_api.py
