[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-hub"
version = "2.0.0"
description = "A lightweight AI Agent tool registry and marketplace — npm for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OpenAgentHub Contributors"}
]
keywords = ["ai", "agent", "registry", "marketplace", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
openagent = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/thz20000921-ship-it/OpenAgentHub"
Repository = "https://github.com/thz20000921-ship-it/OpenAgentHub"
Issues = "https://github.com/thz20000921-ship-it/OpenAgentHub/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "cli*"]
